# miskeenity-canvas

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  web-build.yml
config/: README.md
resources/fonts/: used_lucide_unicodes.txt
resources/scripts/: export_pre_model.py
resources/shaders/: layers.wgsl  mask_multiply.wgsl  maskmultiply.wgsl  mesh.wgsl  mipgen.wgsl  postprocess.wgsl  prealpha.wgsl  selection.wgsl
resources/shell/: shell.html
source/: app.h  color_theme.h  events.cpp  events.h  font_manager.cpp  font_manager.h  graphics.cpp  graphics.h  image.cpp  image.h  imgui_config.h  layer_history.cpp  layer_history.h  layer_manager.cpp  layer_manager.h  layer_mesh_utils.cpp  layer_mesh_utils.h  layers.cpp  layers.h  main.cpp  mesh_manager.cpp  mesh_manager.h  ml_inference.cpp  ml_inference.h  resource_manager.cpp  resource_manager.h  sdl_utils.cpp  sdl_utils.h  texture_manager.cpp  texture_manager.h  ui.cpp  ui.h  webgpu_surface.c  webgpu_surface.cpp  webgpu_surface.h  webgpu_utils.cpp  webgpu_utils.h
